# bettingAI

./: .all-contributorsrc  .gitignore  LICENSE  README.md  gather.py  requirements.txt  scraper.py  setup.cfg  setup.py  values.py  writer.py
extractdata/: gather.py  tester.py  values.py
googleCloud/: initPostgreSQL.py
model/: bottleneck.py  features.py  getInputs.py  helpers.py  model.py  model0.py  playstyle.py  queries.py  testFunctions.py
model/elo/: elo.py  tester.py
model/notebooks/: visualization.ipynb
model/playstyles/: playstyle0.py  playstyle1.py
src/bettingAI/api/: main.py
src/bettingAI/googleCloud/: databaseClasses.py  initPostgreSQL.py
src/bettingAI/model/: bottleneck.py  features.py  getInputs.py  helpers.py  model.py  model0.py  queries.py  testFunctions.py  tf_model_0.py  tf_model_0_1.py
src/bettingAI/oddsapi/: odds.py  oddsen.py  sport_id.json
src/bettingAI/prediction/: fillSchedule.py  getMatches.py  helpers.py  odds_pl_22_23.json  predictor0.py  upcoming.py  upcoming0.py  upcoming1.py
src/bettingAI/processing/: bottleneck.py  features.py  getInputs.py  process0.py  process1.md  process1.py  queries.py  testFunctions.py
src/bettingAI/writer/: addLeagues.py  addRow.py  databaseClasses.py  gather.py  (+10 more)
writer/: addLeagues.py  addRow.py  databaseClasses.py  displayPostreSQL.py  gather.py  initPostgreSQL.py  leagues.json  runDiagnostics.py  scraper.py  testFunctions.py  tester.py  values.py  writer.py
writer/reports/: report 08 april 2023.txt  report 2023-04-23_12-56-03.txt  report 2023-04-28_11-28-30.txt  report 27 march 2023.txt
(+20 files in other folders)
