[metadata]
name = bettingAI
description = Betting AI project that includes gathering and processing data, training and tuning a model and predicting outcomes.
author = erikbohne
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11


[options]
packages =
    bettingAI
install_requires =
    sqlalchemy  >= 2.0.10
    colorama >= 0.4.6
    pandas >= 2.0.1
    cloud-sql-python-connector >= 1.2.2
    cloud-sql-python-connector[pg8000] >= 1.2.2
    beautifulsoup4 >= 4.12.2
    requests >= 2.29.0
    nltk >= 3.8.1
    scikit-learn >= 1.2.2
python_requires = >=3.9
package_dir =
    =src
zip_safe = no
